[package]
name = "colog"
version = "0.2.1"
authors = ["Christian Iversen <ci@iversenit.dk>"]

description = "The `colog` library is a simple formatter backend for the standard rust logging system (in the `log` crate)."

homepage = "https://github.com/chrivers/rust-colog"

readme = "README.md"

categories = ["value-formatting", "command-line-interface", "development-tools"]

license = "LGPL-3.0"

[dependencies]
log = '^0.4'
env_logger = '0.7'
colored = '1.9'
