[package]
name = "colog"
version = "1.0.0"
authors = ["Christian Iversen <ci@iversenit.dk>"]

description = "The `colog` library is a simple formatter backend for the standard rust logging system (in the `log` crate)."

homepage = "https://github.com/chrivers/rust-colog"

readme = "README.md"

categories = ["value-formatting", "command-line-interface", "development-tools"]

license = "LGPL-3.0"

edition = "2018"

[dependencies]
log = '^0.4'
env_logger = '0.9'
colored = '2'
